Character-level message wrap. Fixes #9. Add slashes to front of POST URLs, fixing message send on non-front pages.

--- a/css/safechat.css
+++ b/css/safechat.css
@@ -158,6 +158,8 @@ button:active {
     line-height: 1.28;
     text-align: left;
     text-shadow: rgba(255, 255, 255, .5) 0 1px 0;
+
+    word-wrap: break-word;
     white-space: pre-wrap;
 
     max-width: 157px;
